# hub_link

./: CLAUDE.md  CLIENT.md  Cargo.toml  Makefile  NOTES.md  README.md
.github/workflows/: release.yml
examples/: nervescloud_shared_secret.toml
src/: channel.rs  client.rs  config.rs  firmware.rs  main.rs  serial.rs
src/auth/: mod.rs  mtls.rs  shared_secret.rs
